Fix annoying auto-scale on mobile devices

--- a/public/css/futaba.css
+++ b/public/css/futaba.css
@@ -5,7 +5,7 @@ body {
     color: #800000;
 }
 
-body.desktop, input, select {
+body.desktop {
     font-size: 14.4px;
 }
 
