--- a/public/css/photon.css
+++ b/public/css/photon.css
@@ -5,7 +5,7 @@ body {
     font-family: Verdana,sans-serif;
 }
 
-body.desktop, input, select {
+body.desktop {
     font-size: 14.4px;
 }
 
